Fix up gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ scripts/kconfig/lex.zconf.c
 scripts/kconfig/zconf.hash.c
 scripts/kconfig/zconf.tab.c
 scripts/mod/elfconfig.h
+arch/arm/boot/compressed/piggy.gzip
+kernel/config_data.h
 
 #
 # Top-level generic files
